--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,7 @@ html, body {
 
 	padding: 2px 0px;
 
+
 }
 
 .responsive-menu-icon {
@@ -68,6 +69,10 @@ nav > ul {
 	max-width: 100%;
 
 	height: 50px;
+	
+	
+	border-top: 2px solid #5E6DFF;
+	
 }
 
 ul {
@@ -79,6 +84,7 @@ ul {
 
 
 	list-style: none;
+
 	background-color: #1800FF;
 }
 
@@ -95,6 +101,8 @@ li {
 
 	margin-left: 15px;
 	margin-right: 15px;
+
+	background-color: #1800FF;
 }
 
 
@@ -159,6 +167,7 @@ nav a:hover + .submenu, .submenu:hover {
 
 	nav>ul {
 		display: none;
+		top: 75px;
 	}
 
 	li, .submenu {
@@ -170,10 +179,14 @@ nav a:hover + .submenu, .submenu:hover {
 		margin-left: 0;
 		margin-right: 0;
 	}
-
-	nav a:hover + .submenu, .submenu:hover { 
-		/* We'll make submenus appear with javascript in smartphones and tablets by tapping / clicking */	
+	
+	.submenu-button {
 		display: none;
+	}
+	
+	li .submenu {
+		display: block;
+		top: 0px;
 	}
 
 	.responsive-menu-button {
